# genx-oracle

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  index.yaml  pyproject.toml
.github/workflows/: docker.yml  helm-release.yml
docs/superpowers/plans/: 2026-06-13-fastapi-sse-server.md  2026-06-14-container-helm.md  2026-06-20-web-ui.md
docs/superpowers/specs/: 2026-06-13-fastapi-sse-server-design.md  2026-06-14-container-helm-design.md  2026-06-20-web-ui-design.md
helm/txline-server/: Chart.yaml  values.yaml
helm/txline-server/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
scripts/: check_wallet.py  generate_wallet.py
tests/: test_api_server.py  test_watch.py
txline/: __init__.py  auth.py  client.py  models.py  subscription.py
txline/api/: server.py
txline/api/static/: app.js  index.html  style.css
txline/cli/: stream.py  subscribe.py  watch.py
txline/rest/: fixtures.py
txline/streams/: odds.py  scores.py
