[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["txline"]

[project]
name = "genx-oracle"
version = "0.1.0"
description = "TxLINE sports data feed client"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.7",
    "pynacl>=1.5",
    "python-dotenv>=1.0",
    "solders>=0.21",
    "anchorpy>=0.20",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
txline-subscribe = "txline.cli.subscribe:main"
txline-stream = "txline.cli.stream:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
